--- a/frontend/src/app/core/components/faculty/main/main.component.scss
+++ b/frontend/src/app/core/components/faculty/main/main.component.scss
@@ -1,7 +1,8 @@
 @import "../../../../../styles/mixins";
 
 * {
-  transition: background-color 0.5s ease, color 0.5s ease;
+  color: var(--neutral-base);
+  @include default-transition(true);
 }
 
 .faculty-main-container {
@@ -95,19 +96,22 @@
       &.active {
         color: white;
         transition: color 0.3s ease;
+
+        mat-icon {
+          color: white;
+        }
       }
 
       &:not(.active) {
         transition: color 0.3s ease;
       }
 
-      // Add hover effect
       &:hover:not(.active) {
         color: var(--primary-one);
-      }
 
-      mat-icon {
-        transition: none;
+        mat-icon {
+          color: var(--primary-one);
+        }
       }
     }
   }
@@ -169,6 +173,10 @@
 
           &.logout {
             color: var(--primary-one);
+
+            mat-icon {
+              color: var(--primary-one);
+            }
 
             &:hover {
               background-color: var(--primary-fade);
