add tooltip on profile when hovered

--- a/frontend/src/app/core/components/faculty/main/main.component.html
+++ b/frontend/src/app/core/components/faculty/main/main.component.html
@@ -39,6 +39,8 @@
           alt="Profile Icon"
           class="profile-icon"
           (click)="toggleDropdown()"
+          matTooltip="Click to open settings"
+          matTooltipPosition="below"
         />
         @if (isDropdownOpen) {
         <div class="dropdown-menu">
