--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
@@ -5,33 +5,71 @@
 }
 
 .faculty-preferences-container {
+  @include default-transition;
   display: flex;
   flex-direction: column;
   gap: var(--spacing-lg);
   height: 100%;
-  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 .preferences-row-one {
-  #preferences_title {
-    display: flex;
+  @include flex-center;
+  justify-content: space-between;
+}
+
+#preferences_title {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-xxs);
+
+  h1,
+  p {
+    width: max-content;
+  }
+
+  h1 {
+    @include gradient-primary(315deg);
+    font-size: var(--font-size-2xxl);
+    font-weight: 700;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  p {
+    font-size: var(--font-size-lg);
+  }
+}
+
+#units_container {
+  @include flex-center;
+  gap: var(--spacing-sm);
+  height: inherit;
+  text-align: center;
+
+  .units {
+    @include flex-center;
     flex-direction: column;
-    gap: var(--spacing-xxs);
+    height: inherit;
+    border-radius: var(--border-radius-md);
+    padding: var(--spacing-md);
 
-    h1 {
-      width: max-content;
-      font-size: var(--font-size-2xxl);
-      font-weight: 700;
-      background: var(--gradient-primary);
-      background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+    h2 {
+      font-size: var(--font-size-2xl);
     }
 
-    p {
-      width: max-content;
-      font-size: var(--font-size-lg);
+    h2,
+    span {
+      color: white;
     }
+  }
+
+  .max {
+    @include gradient-primary(315deg);
+  }
+
+  .total {
+    @include gradient-secondary(315deg);
   }
 }
 
@@ -57,50 +95,56 @@
   .custom-mat-search {
     width: 100%;
   }
+}
 
-  #subjects_list {
+#subjects_list {
+  flex: 1;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+
+  .subjects-scroll-container {
+    @include custom-scrollbar;
     flex: 1;
-    overflow: hidden;
+    overflow-y: auto;
+    padding-right: var(--spacing-sm);
+  }
+}
+
+.subject-card {
+  @include default-transition;
+  @include gradient-soft-secondary(30deg);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--spacing-sm);
+  margin-bottom: var(--spacing-xs);
+  border-radius: var(--border-radius-sm);
+
+  .subject-info {
     display: flex;
     flex-direction: column;
+    gap: var(--spacing-xxs);
+  }
 
-    .subjects-scroll-container {
-      flex: 1;
-      overflow-y: auto;
-      padding-right: var(--spacing-sm);
-      @include custom-scrollbar;
-    }
+  .subject-code,
+  .subject-title {
+    color: var(--neutral-base);
+  }
 
-    .subject-card {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: var(--spacing-sm);
-      margin-bottom: var(--spacing-xs);
-      border-radius: var(--border-radius-sm);
-      transition: background-color 0.5s ease;
+  .subject-code {
+    font-weight: 700;
+    font-size: var(--font-size-sm);
+  }
 
-      .subject-info {
-        display: flex;
-        flex-direction: column;
-        gap: var(--spacing-xxs);
+  .subject-title {
+    font-weight: 400;
+    font-size: var(--font-size-md);
+  }
 
-        .subject-code {
-          font-weight: 700;
-          font-size: var(--font-size-sm);
-        }
-
-        .subject-title {
-          font-weight: 400;
-          font-size: var(--font-size-md);
-        }
-      }
-
-      .add-button {
-        @include flex-center;
-        color: var(--neutral-dark);
-      }
-    }
+  .add-button {
+    @include flex-center;
+    color: var(--neutral-base);
   }
 }
 
@@ -150,7 +194,7 @@
   }
 
   .mat-column-action {
-    @include column-width(50px);
+    @include column-width(60px);
   }
   .mat-column-num {
     @include column-width(50px);
@@ -162,15 +206,26 @@
   }
 
   .preferred-day-dropdown {
-    max-width: 90%;
     border: none;
+    padding: var(--spacing-sm) var(--spacing-xs);
     background-color: var(--neutral-light);
     font-size: var(--font-size-sm);
+    color: var(--primary-text);
     font-weight: 500;
     cursor: pointer;
 
     option {
       background-color: var(--neutral-light);
+      color: var(--neutral-base);
     }
+
+    &:hover {
+      background-color: var(--primary-hover);
+      border-radius: var(--border-radius-xl);
+    }
+  }
+
+  .preferred-time-button {
+    color: var(--primary-text);
   }
 }
