--- a/frontend/src/styles/mixins.scss
+++ b/frontend/src/styles/mixins.scss
@@ -57,6 +57,13 @@
   );
 }
 
+/* Custom-color material spinner */
+@mixin custom-spinner($color: var(--primary-one)) {
+  .custom-spinner {
+    --mdc-circular-progress-active-indicator-color: #{$color};
+  }
+}
+
 /* Custom scrollbar styling */
 @mixin custom-scrollbar {
   &::-webkit-scrollbar {
