--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -149,5 +149,10 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
     </div>
+    <!-- <div class="preferences-submit-row">
+      <button mat-raised-button color="primary" (click)="submitPreferences()">
+        Submit
+      </button>
+    </div> -->
   </div>
 </div>
