--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -37,11 +37,12 @@
       <!--Subjects List-->
       <div id="subjects_list">
         <div class="subjects-scroll-container">
-          @for (subject of subjects; track subject.code) {
-          <div class="subject-card">
+          <!-- Ensure the properties match the Course interface -->
+          @for (subject of subjects; track subject.subject_code) {
+            <div class="subject-card">
             <div class="subject-info">
-              <span class="subject-code">{{ subject.code }}</span>
-              <span class="subject-title">{{ subject.title }}</span>
+              <span class="subject-code">{{ subject.subject_code }}</span>
+              <span class="subject-title">{{ subject.subject_title }}</span>
             </div>
             <button
               mat-icon-button
@@ -51,7 +52,7 @@
               <mat-icon>add</mat-icon>
             </button>
           </div>
-          }
+        }
         </div>
       </div>
     </div>
@@ -66,7 +67,7 @@
             <button
               mat-icon-button
               class="custom-mat-button"
-              (click)="removeSubject(element.subjectCode)"
+              (click)="removeSubject(element.subject_code)"
             >
               <mat-icon>remove_circle</mat-icon>
             </button>
@@ -78,34 +79,29 @@
           <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
         </ng-container>
 
-        <!-- Subject Code Column -->
-        <ng-container matColumnDef="subjectCode">
+        <ng-container matColumnDef="subject_code">
           <th mat-header-cell *matHeaderCellDef>Subject Code</th>
-          <td mat-cell *matCellDef="let element">{{ element.subjectCode }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.subject_code }}</td>
         </ng-container>
-
-        <!-- Subject Title Column -->
-        <ng-container matColumnDef="subjectTitle">
+        
+        <ng-container matColumnDef="subject_title">
           <th mat-header-cell *matHeaderCellDef>Subject Title</th>
-          <td mat-cell *matCellDef="let element">{{ element.subjectTitle }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.subject_title }}</td>
         </ng-container>
-
-        <!-- Lec Column -->
-        <ng-container matColumnDef="lec">
+        
+        <ng-container matColumnDef="lec_hours">
           <th mat-header-cell *matHeaderCellDef>Lec</th>
-          <td mat-cell *matCellDef="let element">{{ element.lec }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.lec_hours }}</td>
         </ng-container>
-
-        <!-- Lab Column -->
-        <ng-container matColumnDef="lab">
+        
+        <ng-container matColumnDef="lab_hours">
           <th mat-header-cell *matHeaderCellDef>Lab</th>
-          <td mat-cell *matCellDef="let element">{{ element.lab }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.lab_hours }}</td>
         </ng-container>
-
-        <!-- Units Column -->
-        <ng-container matColumnDef="units">
+        
+        <ng-container matColumnDef="total_units">
           <th mat-header-cell *matHeaderCellDef>Units</th>
-          <td mat-cell *matCellDef="let element">{{ element.units }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.total_units }}</td>
         </ng-container>
 
         <!-- Preferred Day Column -->
@@ -120,10 +116,10 @@
             >
               <option value="" disabled selected>Select day</option>
               @for (day of daysOfWeek; track day) {
-              <option [value]="day">
+                <option [value]="day">
                 {{ day }}
               </option>
-              }
+            }
             </select>
           </td>
         </ng-container>
