enable faculty can set subject preferences (frontend to backend)

--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -145,10 +145,12 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
     </div>
-    <!-- <div class="preferences-submit-row">
+
+    <!-- Mock submit button just for testing the submission of a preferences subject. -->
+    <div class="preferences-submit-row">
       <button mat-raised-button color="primary" (click)="submitPreferences()">
         Submit
       </button>
-    </div> -->
+    </div>
   </div>
 </div>
