--- a/frontend/src/app/core/components/faculty/main/main.component.scss
+++ b/frontend/src/app/core/components/faculty/main/main.component.scss
@@ -198,3 +198,20 @@
 .faculty-main-content {
   height: 100%;
 }
+
+.spinner-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--opacity-semi-transparent); 
+  z-index: 9999;
+
+  padding: var(--spacing-lg);
+  border-radius: var(--border-radius-base);
+}
+
