--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -16,9 +16,9 @@
   }
 
   // Typography
-  --font-family: "Inter Tight",
-  "Helvetica Neue",
-  sans-serif;
+  --font-family: "Inter Tight", "Helvetica Neue", sans-serif;
+  --font-header: "Trajan Pro", serif;
+
   --font-size-xs: 0.65rem;
   --font-size-sm: 0.875rem;
   --font-size-md: 1rem;
@@ -45,6 +45,7 @@
 
   // Border radius
   --border-radius-base: 0.25rem;
+  --border-radius-xs: 0.3rem;
   --border-radius-sm: 0.5rem;
   --border-radius-md: 0.75rem;
   --border-radius-lg: 1rem;
@@ -97,6 +98,7 @@ body {
 
 * {
   font-family: "Inter Tight", "Helvetica Neue", sans-serif;
+  @include custom-scrollbar;
 }
 
 /*
@@ -109,4 +111,8 @@ body {
   // when appearance="fill"
   border-top-left-radius: 10px !important;
   border-top-right-radius: 10px !important;
+}
+
+.mdc-list-item__primary-text {
+  font-family: "Inter Tight", sans-serif !important;
 }
