--- a/frontend/src/styles/m3-theme.scss
+++ b/frontend/src/styles/m3-theme.scss
@@ -27,9 +27,9 @@ $_palettes: (
     20: #442925,
     25: #513430,
     30: #5d3f3b,
-    35: #6a4b46,
-    40: #775651,
-    50: #926f69,
+    35: #51466a,
+    40: #595177,
+    50: #7d6992,
     60: #ae8882,
     70: #caa29c,
     80: #e7bdb6,
@@ -88,7 +88,7 @@ $_palettes: (
   neutral-variant: (
     0: #000000,
     10: #251917,
-    20: #3b2d2b,
+    20: #2d2d2d, // #3b2d2b
     25: #473836,
     30: #232323, // default: #534341
     35: #5f4f4c,
