--- a/frontend/src/styles/mixins.scss
+++ b/frontend/src/styles/mixins.scss
@@ -57,6 +57,15 @@
   );
 }
 
+/* Primary Gradient for text */
+@mixin gradient-primary-text($degree: 90deg) {
+  @include gradient-primary($degree);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: "Inter Tight", "Helvetica Neue", sans-serif;
+}
+
 /* Custom-color material spinner */
 @mixin custom-spinner($color: var(--primary-one)) {
   .custom-spinner {
@@ -68,6 +77,7 @@
 @mixin custom-scrollbar {
   &::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
   }
 
   &::-webkit-scrollbar-track {
@@ -77,9 +87,8 @@
   &::-webkit-scrollbar-thumb {
     background-color: var(--neutral-bar);
     border-radius: 3px;
+    cursor: pointer;
   }
-
-  cursor: pointer;
 }
 
 /* Hide the scrollbar */
