--- a/frontend/src/app/auth/login/login.component.scss
+++ b/frontend/src/app/auth/login/login.component.scss
@@ -242,13 +242,8 @@
     gap: var(--spacing-xxs);
     font-size: var(--font-size-sm);
 
-    mat-icon {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: var(--error-base);
+    span.material-symbols-rounded {
       font-size: var(--font-size-md);
-      font-weight: 500;
     }
 
     span {
