--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -31,7 +31,7 @@
         <mat-form-field appearance="fill" class="custom-mat-search">
           <mat-label>Search</mat-label>
           <input matInput />
-          <mat-icon matPrefix>search</mat-icon>
+          <span mat-symbol="search" matPrefix></span>
         </mat-form-field>
       </div>
       <!--Subjects List-->
@@ -39,15 +39,15 @@
         <div class="subjects-scroll-container">
           <!-- Display spinner while loading -->
           @if (loading) {
-            <div class="spinner-wrapper">
-              <mat-spinner diameter="30" class="custom-spinner"></mat-spinner>
-            </div>
+          <div class="spinner-wrapper">
+            <mat-spinner diameter="30" class="custom-spinner"></mat-spinner>
+          </div>
           }
           <!-- Display subjects when loaded -->
           @if (!loading) {
           <!-- Ensure the properties match the Course interface -->
           @for (subject of subjects; track subject.subject_code) {
-            <div class="subject-card">
+          <div class="subject-card">
             <div class="subject-info">
               <span class="subject-code">{{ subject.subject_code }}</span>
               <span class="subject-title">{{ subject.subject_title }}</span>
@@ -57,11 +57,10 @@
               class="add-button"
               (click)="addSubjectToTable(subject)"
             >
-              <mat-icon>add</mat-icon>
+              <span mat-symbol="add" variant="outlined" size="20px"></span>
             </button>
           </div>
-        }
-      }
+          } }
         </div>
       </div>
     </div>
@@ -78,7 +77,11 @@
               class="custom-mat-button"
               (click)="removeSubject(element.subject_code)"
             >
-              <mat-icon>remove_circle</mat-icon>
+              <span
+                mat-symbol="do_not_disturb_on"
+                variant="outlined"
+                size="20px"
+              ></span>
             </button>
           </td>
         </ng-container>
@@ -92,22 +95,24 @@
           <th mat-header-cell *matHeaderCellDef>Subject Code</th>
           <td mat-cell *matCellDef="let element">{{ element.subject_code }}</td>
         </ng-container>
-        
+
         <ng-container matColumnDef="subject_title">
           <th mat-header-cell *matHeaderCellDef>Subject Title</th>
-          <td mat-cell *matCellDef="let element">{{ element.subject_title }}</td>
+          <td mat-cell *matCellDef="let element">
+            {{ element.subject_title }}
+          </td>
         </ng-container>
-        
+
         <ng-container matColumnDef="lec_hours">
           <th mat-header-cell *matHeaderCellDef>Lec</th>
           <td mat-cell *matCellDef="let element">{{ element.lec_hours }}</td>
         </ng-container>
-        
+
         <ng-container matColumnDef="lab_hours">
           <th mat-header-cell *matHeaderCellDef>Lab</th>
           <td mat-cell *matCellDef="let element">{{ element.lab_hours }}</td>
         </ng-container>
-        
+
         <ng-container matColumnDef="total_units">
           <th mat-header-cell *matHeaderCellDef>Units</th>
           <td mat-cell *matCellDef="let element">{{ element.total_units }}</td>
@@ -125,10 +130,10 @@
             >
               <option value="" disabled selected>Select day</option>
               @for (day of daysOfWeek; track day) {
-                <option [value]="day">
+              <option [value]="day">
                 {{ day }}
               </option>
-            }
+              }
             </select>
           </td>
         </ng-container>
@@ -153,13 +158,12 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
-    </div>
-
-    <!-- Mock submit button just for testing the submission of a preferences subject. -->
-    <div class="preferences-submit-row">
-      <button mat-raised-button color="primary" (click)="submitPreferences()">
-        Submit
-      </button>
+      <div class="table-footer">
+        <div class="submit-container" (click)="submitPreferences()">
+          <span mat-symbol="done"></span>
+          <span>Submit Preferences</span>
+        </div>
+      </div>
     </div>
   </div>
 </div>
